--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,18 @@
     More info at: http://lesselements.com
     MODIFIED BY: Brandon Brown
   ---------------------------------------------------*/
+@font-face {
+    font-family: 'mission_scriptregular';
+    src: url('fonts/mission-script-webfont.eot');
+    src: url('fonts/mission-script-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/mission-script-webfont.woff2') format('woff2'),
+         url('fonts/mission-script-webfont.woff') format('woff'),
+         url('fonts/mission-script-webfont.ttf') format('truetype'),
+         url('fonts/mission-script-webfont.svg#mission_scriptregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 * html .clearfix {
   zoom: 1;
 }
@@ -73,8 +85,9 @@ h3,
 h4 {
   color: #0e3029;
   padding: 0 0 50px 0;
-  font-family: 'Roboto';
-  font-weight: 300;
+  font-family: 'mission_scriptregular';
+  /*font-weight: 300;*/
+  /*font-family: 'Roboto';*/
 }
 h1 {
   font-size: 3rem;
