--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: 'mission_scriptregular';
-    src: url('mission-script-webfont.eot');
-    src: url('mission-script-webfont.eot?#iefix') format('embedded-opentype'),
-         url('mission-script-webfont.woff2') format('woff2'),
-         url('mission-script-webfont.woff') format('woff'),
-         url('mission-script-webfont.ttf') format('truetype'),
-         url('mission-script-webfont.svg#mission_scriptregular') format('svg');
+    src: url('css/mission-script-webfont.eot');
+    src: url('css/mission-script-webfont.eot?#iefix') format('embedded-opentype'),
+         url('css/mission-script-webfont.woff2') format('woff2'),
+         url('css/mission-script-webfont.woff') format('woff'),
+         url('css/mission-script-webfont.ttf') format('truetype'),
+         url('css/mission-script-webfont.svg#mission_scriptregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
