--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,8 @@ h4 {
   color: #0e3029;
   padding: 0 0 50px 0;
   font-family: 'mission_scriptregular';
-  /*font-weight: 300;*/
-  /*font-family: 'Roboto';*/
+  font-weight: 700;
+  font-family: 'Roboto';
 }
 h1 {
   font-size: 3rem;
