--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,8 @@ header img.rainbow {
   height: 2px;
 }
 header h1 {
-  font-family: 'mission_scriptregular';
+  /*font-family: 'mission_scriptregular';*/
+  font-family: 'Roboto';
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.75rem;
@@ -310,7 +311,8 @@ header ul li {
 header ul li a {
   display: inline-block;
   padding-bottom: 6px;
-  font-family: 'mission_scriptregular';
+  /*font-family: 'mission_scriptregular';*/
+  font-family: 'Roboto';
   font-weight: 400;
   color: #ffffff;
 }
