--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1129,7 +1129,8 @@ div.posts h3 {
   padding: 0 0 12.5px 0;
   margin: 0;
   font-size: 2.25rem;
-  font-family: 'mission_scriptregular';
+  /*font-family: 'mission_scriptregular';*/
+  font-family: 'Roboto';
   font-weight: 300;
   color: #0e3029;
 }
