--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,12 @@
   ---------------------------------------------------*/
 @font-face {
     font-family: 'mission_scriptregular';
-    src: url('fonts/mission-script-webfont.eot');
-    src: url('fonts/mission-script-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/mission-script-webfont.woff2') format('woff2'),
-         url('fonts/mission-script-webfont.woff') format('woff'),
-         url('fonts/mission-script-webfont.ttf') format('truetype'),
-         url('fonts/mission-script-webfont.svg#mission_scriptregular') format('svg');
+    src: url('assets/fonts/mission-script-webfont.eot');
+    src: url('assets/fonts/mission-script-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/fonts/mission-script-webfont.woff2') format('woff2'),
+         url('assets/fonts/mission-script-webfont.woff') format('woff'),
+         url('assets/fonts/mission-script-webfont.ttf') format('truetype'),
+         url('assets/fonts/mission-script-webfont.svg#mission_scriptregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -1131,7 +1131,7 @@ div.posts h3 {
   font-size: 2.25rem;
   font-family: 'mission_scriptregular';
   /*font-family: 'Roboto';*/
-  font-weight: 300;
+  /*font-weight: 300;*/
   color: #0e3029;
 }
 div.posts h3 a {
