--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     More info at: http://lesselements.com
     MODIFIED BY: Brandon Brown
   ---------------------------------------------------*/
-/*
+
 @font-face {
     font-family: 'mission_scriptregular';
     src: url('https://dl.dropboxusercontent.com/u/19084607/fonts/mission-script-webfont.eot');
@@ -19,7 +19,7 @@
     font-weight: normal;
     font-style: normal;
 
-}*/
+}
 * html .clearfix {
   zoom: 1;
 }
