--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ header {
   width: 100%;
   height: 280px;
   overflow: hidden;
-  background-color: #000;
+  background-color: #37cca2;
 }
 header .bg {
   position: absolute;
@@ -214,12 +214,13 @@ header .bg {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('') #000000 no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  overflow: hidden;
+  background-color: #37cca2;
+  /*background: url('') #000000 no-repeat center center;*/
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*background-size: cover;*/
+  /*overflow: hidden;*/
 }
 header .shadow {
   position: absolute;
@@ -1312,4 +1313,23 @@ h3.tag-header {
   font-size: 10pt;
   line-height: 10pt;
   padding: 7px;
+}
+header .header-graphic{
+  color: #fff;
+}
+header .header-graphic h4{
+  color: #fff;
+  font-family: 'mission_scriptregular';
+  text-align: center;
+  -webkit-box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
+  -moz-box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
+  box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
+}
+header .header-graphic h1{
+  color: #fff;
+  font-family: 'mission_scriptregular';
+  text-align: center;
+  -webkit-box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
+  -moz-box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
+  box-shadow: 3px 3px 29px 0px rgba(0,0,0,0.4);
 }
