--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -1,5 +1,6 @@
 #my-styles header{
   background-color: #37cca2;
+  height: 220px;
 }
 #my-styles header h1{
   color: #fff;
@@ -7,9 +8,11 @@
   text-align: center;
   font-size: 80px;
   font-weight: 100;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
 
 }
 #my-styles header h4{
+  color: #fff;
   font-weight: 100;
   font-family: 'mission_scriptregular';
   text-align: center;
