--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -8,15 +8,20 @@
   text-align: center;
   font-size: 80px;
   font-weight: 100;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
 
 }
 #my-styles header h4{
-  color: #fff;
+
   font-weight: 100;
   font-family: 'mission_scriptregular';
   text-align: center;
   padding-bottom: 0px;
   padding-top: 50px;
   font-size: 25px;
+}
+
+#my-styles h1, h2, h3, h4, h5{
+  font-weight: 100;
+  font-family: 'mission_scriptregular';
 }
