--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -1,5 +1,5 @@
 #my-styles header{
-  background-color: #37cca2;
+  background-color: #56a24c;
   height: 220px;
 }
 #my-styles header h1{
@@ -24,4 +24,8 @@
 #my-styles h1, h2, h3, h4, h5{
   font-weight: 100;
   font-family: 'mission_scriptregular';
+}
+
+#my-styles .post h1 {
+  padding-bottom: 35px;
 }
