--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -1,5 +1,5 @@
 #my-styles header{
-  background-color: #56a24c;
+  background-color: #f37021;
   height: 220px;
   padding-bottom: 5px;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
