--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,300italic,400italic,500italic);
+@import url(https://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic);
 @import url(http://postach.io/static/themes/_assets/symbolset/ss-pika.css);
 /*---------------------------------------------------
     LESS Elements 0.9.1
@@ -77,7 +78,7 @@ body {
   font-family: 'Roboto', helvetica, arial, sans-serif;
   color: #0e3029;
   line-height: 1.5rem;
-  font-family: 'Roboto';
+  font-family: 'Volkorn';
   font-weight: 300;
 }
 h1,
@@ -88,7 +89,7 @@ h4 {
   padding: 0 0 50px 0;
   font-family: 'mission_scriptregular';
   font-weight: 700;
-  font-family: 'Roboto';
+  font-family: 'Vollkorn';
 }
 h1 {
   font-size: 3rem;
@@ -755,13 +756,13 @@ a.btn.btn-mini:hover {
 }
 .post-author p span.post-date {
   color: #afb7b5;
-  font-family: 'Roboto';
-  font-weight: 300;
+  font-family: 'Volkorn';
+  font-weight: 400;
   font-size: 0.85rem;
 }
 .post-author p span.post-author-name {
   font-size: 0.85rem;
-  font-family: 'Roboto';
+  font-family: 'Volkorn';
   font-weight: 400;
   color: #f37021;
 }
@@ -781,7 +782,7 @@ a.btn.btn-mini:hover {
   font-size: 0.85rem;
 }
 .post-options li a {
-  font-family: 'Roboto';
+  font-family: 'Volkorn';
   font-weight: 400;
   font-size: 0.9rem;
 }
@@ -957,7 +958,7 @@ div.posts div.item .post-author img {
 }
 div.posts div.item .post-author p {
   padding: 4px 0 0 10px;
-  font-family: 'Roboto';
+  font-family: 'Volkorn';
   font-weight: 400;
 }
 div.posts div.item .post-author p span {
@@ -990,7 +991,7 @@ div.posts h3 {
   margin: 0;
   font-size: 2.25rem;
   font-family: 'mission_scriptregular';
-  /*font-family: 'Roboto';*/
+  /*font-family: 'Volkorn';*/
   /*font-weight: 300;*/
   color: #0e3029;
 }
@@ -1025,7 +1026,7 @@ h3.tag-header {
   margin: 0;
   clear: both;
   font-size: 0.85rem;
-  font-family: 'Roboto';
+  font-family: 'Volkorn';
   font-weight: 400;
 }
 .pagination:after {
