--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -30,3 +30,8 @@
 
 #my-styles .post h1 {
   padding-bottom: 35px;
+}
+#my-styles body {
+  font-family: 'Vollkorn', helvetica, arial, sans-serif;
+  font-weight: 300;
+}
