--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -29,9 +29,19 @@
 }
 
 #my-styles .post h1 {
-  padding-bottom: 35px;
+  padding-bottom: 25px;
 }
 #my-styles body {
   font-family: 'Vollkorn', helvetica, arial, sans-serif;
-  font-weight: 300;
+  font-weight: 400;
+}
+
+#my-styles div.posts div.item .post-content p {
+  font-size: 20px;
+  line-height: 32px;
+}
+
+#my-styles div.posts div.item .post-content div {
+  font-size: 20px;
+  line-height: 32px;
 }
